syntax = "proto3";

package chat.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/MyyPo/grpc-chat/pb/chat/v1;chatpb";

service BroadcastService {
    rpc ServerMessageStream (ServerMessageStreamRequest) returns (stream Message);
    rpc ClientMessage (Message) returns (Close);
}

message User {
    string id = 1;
    string name = 2;
}

message Message {
    string id = 1;
    string content = 2;
    google.protobuf.Timestamp timestamp = 3;
}

// message to establish client connection to the server
message ServerMessageStreamRequest {
    User user = 1;
    bool active = 2;
}

// message closing the connection
message Close {}